--- a/estilo.css
+++ b/estilo.css
@@ -4,12 +4,12 @@
 }
 
 body{
- background-color: aquamarine;
+ background-color: white;
 
 }
 
 main{
-    background-color: bisque;
+    background-color:beige;
     width: 500px;
     margin: auto;
     padding: 10px;
